<resources>
    <string name="app_name">Application</string>
    <string name="text_tech_support">Welcome to our project. You can call us on the phone below, write by mail or write a message directly from the application</string>
    <string name="download" translatable="false">Download</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="i_read_terms_of_use">I read terms of use</string>
    <string name="register">Sign up</string>
    <string name="enter_your_surname">Enter your Surname</string>
    <string name="enter_your_middle_name">Enter your Middle name</string>
    <string name="please_choose_your_birthday_date">Please choose your birthday date</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="enter_city_where_your_live">Enter city where your live</string>
    <string name="write_something_about_yourself">Write something about yourself</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send_message">Send message</string>
    <string name="technical_support">Technical Support</string>
    <string name="tech_header">tech_header</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="middle_name">Middle name:</string>
    <string name="birthday">Birthday:</string>
    <string name="city">City:</string>
    <string name="about_myself">About Myself</string>
    <string name="upload_image">Upload Image</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_your_password">Enter your password...</string>
    <string name="sign_out">Sign out</string>
    <string name="address">Address:</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="news">News</string>
    <string name="houses_that_without_water_kamzina_164_163_171">Houses that without water: Kamzina 164,163,171</string>
    <string name="date_21_02_2021">Date: 21.02.2021</string>
    <string name="houses_that_without_light_lomovo_171_131_182">Houses that without light: Lomovo 171,131,182</string>
    <string name="from_9_00_to_17_00">From: 9:00 to 17:00</string>
    <string name="date_27_03_2021">Date: 27.03.2021</string>
    <string name="pipe_flushing_kataeva_16_18">Pipe flushing: Kataeva 16,18</string>
    <string name="from_12_00_to_16_00">From: 12:00 to 16:00</string>
    <string name="date_11_04_2021">Date: 11.04.2021</string>
    <string name="houses_that_without_water_gagarina_134_141_146">Houses that without water: Gagarina 134,141,146</string>
    <string name="from_10_00_to_18_00">From: 10:00 to 18:00</string>
    <string name="date_24_03_2021">Date: 24.03.2021</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="leave_your_application">Leave your application</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="choose_service">Choose Service</string>
    <string name="describe_your_problem">Describe your problem</string>
    <string name="application">Application:</string>
    <string name="problem">Problem:</string>
    <string name="reqired">Required</string>

    <string-array name="services">

        <item>Нету света</item>
        <item>Нету воды</item>
        <item>Чистка труб</item>
        <item>Замена пломбы</item>
        <item>Замена счетчика</item>
        <item>Другое</item>

    </string-array>
</resources>