<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".ui.registerlogin.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/selectPhoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_select_photo"
            android:src="@drawable/empty_avatar"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/register" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toBottomOf="@id/selectPhoto"
            app:layout_constraintEnd_toEndOf="@id/selectPhoto"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/selectPhoto"
            app:layout_constraintTop_toTopOf="@id/selectPhoto"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/enter_your_name"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/btn_color"
            app:boxStrokeColor="@color/btn_color"
            app:helperText="@string/reqired"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectPhoto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutSurname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_your_surname"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/btn_color"
            app:boxStrokeColor="@color/btn_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLayoutName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutRegAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_your_address"
            app:endIconMode="clear_text"
            app:helperText="@string/reqired"
            app:hintTextColor="@color/btn_color"
            app:boxStrokeColor="@color/btn_color"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLayoutSurname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegAddress"
                android:layout_width="match_parent"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPickupDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/please_choose_your_birthday_date"
            android:textSize="18sp"
            android:textAlignment="center"
            app:hintTextColor="@color/btn_color"
            app:boxStrokeColor="@color/btn_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/datePicker"
            app:layout_constraintEnd_toStartOf="@id/datePicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/datePicker" />

        <Button
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#ffa45c"
            android:text="@string/pick_a_date"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/tvPickupDate"
            app:layout_constraintTop_toBottomOf="@id/etLayoutRegAddress" />

        <TextView
            android:id="@+id/tvSelectedDate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/datePicker"
            tools:text="14/07/1999" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutCity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_city_where_your_live"
            app:hintTextColor="@color/btn_color"
            app:boxStrokeColor="@color/btn_color"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSelectedDate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="310dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutAboutYourself"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:hintTextColor="@color/btn_color"
            app:boxStrokeColor="@color/btn_color"
            android:gravity="top"
            android:hint="@string/write_something_about_yourself"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aboutYourself"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textCursorDrawable="@drawable/cursor_color"/>
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="208dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/btn_color"
            app:boxStrokeColor="@color/btn_color"
            android:hint="@string/enter_login"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/guideline4"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/cursor_color"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextColor="@color/btn_color"
            app:boxStrokeColor="@color/btn_color"
            android:hint="@string/enter_your_password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/etLayoutEmail"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/cursor_color"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:layout_constraintEnd_toStartOf="@id/tvLicense"
            app:layout_constraintStart_toEndOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@+id/etLayoutPassword" />

        <TextView
            android:id="@+id/tvLicense"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:text="@string/i_read_terms_of_use"
            app:layout_constraintBottom_toBottomOf="@id/checkbox"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toTopOf="@id/checkbox" />

       <com.google.android.material.button.MaterialButton
           android:id="@+id/btnRegister"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/register"
           android:backgroundTint="#ffa45c"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="16dp"
           android:layout_marginBottom="8dp"
           app:layout_constraintTop_toBottomOf="@id/checkbox"
           app:layout_constraintEnd_toEndOf="@id/content_end"
           app:layout_constraintStart_toStartOf="@id/content_start"
           app:layout_constraintBottom_toBottomOf="parent"
           />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>